--- a/Avans Fysio WebApplicatie/Avans Fysio WebApplicatie.csproj
+++ b/Avans Fysio WebApplicatie/Avans Fysio WebApplicatie.csproj
@@ -25,4 +25,8 @@
     <Folder Include="SeedData\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
