--- a/Avans Fysio WebApplicatie/appsettings.json
+++ b/Avans Fysio WebApplicatie/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Avans_Fysio_WebApplicatie-3ADD0DE7-C24C-477A-8212-7FBD29F621A6;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AvansFysioWebApplicatieConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AvansFysioWebApplicatie;MultipleActiveResultSets=true"
+  }
 }
