Added new string for public SQL

--- a/Avans Fysio WebService/appsettings.json
+++ b/Avans Fysio WebService/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AvansFysioWebServiceConnection" : "Server=(localdb)\\MSSQLLocalDB;Database=AvansFysioWebService;MultipleActiveResultSets=true"
+    //"AvansFysioWebServiceConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AvansFysioWebService;MultipleActiveResultSets=true",
+    "AvansFysioWebServiceConnection": "Server=tcp:identityfysio.database.windows.net,1433;Initial Catalog=AvansFysioWebService;Persist Security Info=False;User ID=ryan;Password=TGhe^uzj#Z#97sZrKtoEB;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   }
 }
