--- a/Fysio WebApplication/appsettings.json
+++ b/Fysio WebApplication/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ConnectionStrings": {
-    "FysioWebApplicatieConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FysioWebApplicatie;MultipleActiveResultSets=true",
-    "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Identity;MultipleActiveResultSets=true"
+    "FysioWebApplicatieConnection": "Server=tcp:identityfysio.database.windows.net,1433;Initial Catalog=AvansFysioApplication;Persist Security Info=False;User ID=ryan;Password=TGhe^uzj#Z#97sZrKtoEB;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    //"FysioWebApplicatieConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FysioWebApplicatie;MultipleActiveResultSets=true",
+
+    //"IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Identity;MultipleActiveResultSets=true"
+    "IdentityConnection": "Server=tcp:identityfysio.database.windows.net,1433;Initial Catalog=Identity;Persist Security Info=False;User ID=ryan;Password=TGhe^uzj#Z#97sZrKtoEB;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
   },
   "Logging": {
     "LogLevel": {
