--- a/Fysio WebApplication/FysioWebApplication.csproj
+++ b/Fysio WebApplication/FysioWebApplication.csproj
@@ -14,6 +14,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.20" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="RestSharp" Version="106.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Avans Fysio WebService\AvansFysioWebService.csproj" />
   </ItemGroup>
 
 </Project>
