--- a/Avans Fysio WebService/AvansFysioWebService.csproj
+++ b/Avans Fysio WebService/AvansFysioWebService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp6</TargetFramework>
@@ -9,6 +9,7 @@
     <PackageReference Include="CsvHelper" Version="28.0.1" />
     <PackageReference Include="EFCore.Seeder" Version="3.1.0" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.12.1" />
+    <PackageReference Include="HotChocolate.Types.Filters" Version="12.12.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.8" />
