Rescaffolded Identity Framework.

--- a/Fysio WebApplication/appsettings.json
+++ b/Fysio WebApplication/appsettings.json
@@ -1,14 +1,8 @@
 {
   "ConnectionStrings": {
     "ApplicationConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Application2;MultipleActiveResultSets=true",
-    //"FysioWebApplicatieConnection": "Server=tcp:identityfysio.database.windows.net,1433;Initial Catalog=AvansFysioApplication;Persist Security Info=False;User ID=ryan;Password=TGhe^uzj#Z#97sZrKtoEB;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-
     "IdentityConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Identity3;MultipleActiveResultSets=true",
-    //"IdentityConnection": "Server=tcp:identityfysio.database.windows.net,1433;Initial Catalog=Identity;Persist Security Info=False;User ID=ryan;Password=TGhe^uzj#Z#97sZrKtoEB;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-
-    // "PatientPortalDbContextConnection": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityPatient;MultipleActiveResultSets=true"
-    //"PatientPortalDbContextConnection": "Server=tcp:identityfysio.database.windows.net,1433;Initial Catalog=IdentityPatient;Persist Security Info=False;User ID=ryan;Password=TGhe^uzj#Z#97sZrKtoEB;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-
+    "AppIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FysioWebApplication;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
