--- a/Fysio_Identity/Fysio_Identity.csproj
+++ b/Fysio_Identity/Fysio_Identity.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Library.core\Library.core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
