Changed the whole course of identity.
Added different users that can login.
Also added a new register page that works.

--- a/Fysio WebApplication/appsettings.json
+++ b/Fysio WebApplication/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "ApplicationConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FysioWebApplication;MultipleActiveResultSets=true",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AppIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FysioWebApplication;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
