--- a/Fysio WebApplication/FysioWebApplication.csproj
+++ b/Fysio WebApplication/FysioWebApplication.csproj
@@ -32,5 +32,7 @@
     <ProjectReference Include="..\Library.Data\Library.Data.csproj" />
     <ProjectReference Include="..\Library.Domain\Library.Domain.csproj" />
   </ItemGroup>
-
+  <PropertyGroup>
+    <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
+  </PropertyGroup>
 </Project>
