--- a/Avans Fysio WebService/appsettings.json
+++ b/Avans Fysio WebService/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AvansFysioDevWebServiceConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AvansFysioWebService2;MultipleActiveResultSets=true",
-    "AvansFysioWebServiceConnection": "Server=tcp:avansfysiowebservice.database.windows.net,1433;Initial Catalog=AvansFysioWebService;Persist Security Info=False;User ID=FysioWebApplication;Password=5KX877gsD4$oCFPxGAVd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AvansFysioWebServiceConnection": "Server=tcp:fysiowebapplication.database.windows.net,1433;Initial Catalog=fysiowebservice;Persist Security Info=False;User ID=fysiowebapplication;Password=czNmgkmaTaJ&s7JNeeLN;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
