--- a/Fysio WebApplication/appsettings.json
+++ b/Fysio WebApplication/appsettings.json
@@ -5,8 +5,8 @@
     "ApplicationConnection": "Server=tcp:fysiowebapplication.database.windows.net,1433;Initial Catalog=FysioWebApplication;Persist Security Info=False;User ID=fysiowebapplication;Password=czNmgkmaTaJ&s7JNeeLN;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "IdentityConnection": "Server=tcp:fysiowebapplication.database.windows.net,1433;Initial Catalog=identity;Persist Security Info=False;User ID=fysiowebapplication;Password=czNmgkmaTaJ&s7JNeeLN;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "AvansFysioDevWebServiceConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AvansFysioWebService2;MultipleActiveResultSets=true",
-    "AvansFysioWebServiceConnection": "Server=tcp:fysiowebapplication.database.windows.net,1433;Initial Catalog=fysiowebservice;Persist Security Info=False;User ID=fysiowebapplication;Password=czNmgkmaTaJ&s7JNeeLN;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-
+    "AvansFysioWebServiceConnection": "Server=tcp:fysiowebapplication.database.windows.net,1433;Initial Catalog=fysiowebservice;Persist Security Info=False;User ID=fysiowebapplication;Password=czNmgkmaTaJ&s7JNeeLN;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "GraphqlUrl": "https://fysiowebservice.azurewebsites.net/graphql",
   },
   "Logging": {
     "LogLevel": {
