--- a/Library.core/Library.core.csproj
+++ b/Library.core/Library.core.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fysio_Codes\Fysio_Codes.csproj" />
+  </ItemGroup>
+
 </Project>
