--- a/Fysio WebApplication/FysioWebApplication.csproj
+++ b/Fysio WebApplication/FysioWebApplication.csproj
@@ -29,7 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Avans Fysio WebService\AvansFysioWebService.csproj" />
-    <ProjectReference Include="..\Fysio_Identity\Fysio_Identity.csproj" />
+    <ProjectReference Include="..\Fysio_Identity\Identity.csproj" />
     <ProjectReference Include="..\Library.core\Library.core.csproj" />
     <ProjectReference Include="..\Library.Data\Library.Data.csproj" />
     <ProjectReference Include="..\Library.Domain\Library.Domain.csproj" />
