--- a/Library.core/Library.core.csproj
+++ b/Library.core/Library.core.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fysio_Codes\Fysio_Codes.csproj" />
+    <ProjectReference Include="..\Fysio_Codes\Library.DomainServices.csproj" />
   </ItemGroup>
 
 </Project>
