Forgot ErrorOnDuplicatePublishOutputfiles on false

--- a/Library.Data.Tests/Library.Data.Tests.csproj
+++ b/Library.Data.Tests/Library.Data.Tests.csproj
@@ -27,4 +27,7 @@
     <ProjectReference Include="..\Library.Data\Library.Data.csproj" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
+  </PropertyGroup>
 </Project>
