--- a/Avans Fysio WebService/AvansFysioWebService.csproj
+++ b/Avans Fysio WebService/AvansFysioWebService.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DomainServices\DomainServices.csproj" />
     <ProjectReference Include="..\EFFysioData\EFFysioData.csproj" />
+    <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
   <PropertyGroup>
     <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
