--- a/Fysio WebApplication/FysioWebApplication.csproj
+++ b/Fysio WebApplication/FysioWebApplication.csproj
@@ -37,4 +37,10 @@
   <PropertyGroup>
     <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702,CS8603</NoWarn>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702,CS8603</NoWarn>
+  </PropertyGroup>
 </Project>
