--- a/EFFysioData/appsettings.json
+++ b/EFFysioData/appsettings.json
@@ -14,6 +14,6 @@
     "IdentityConnection": "Server=tcp:fysiowebapplication.database.windows.net,1433;Initial Catalog=identity;Persist Security Info=False;User ID=fysiowebapplication;Password=czNmgkmaTaJ&s7JNeeLN;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "AvansFysioDevWebServiceConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AvansFysioWebService2;MultipleActiveResultSets=true",
     "AvansFysioWebServiceConnection": "Server=tcp:fysiowebapplication.database.windows.net,1433;Initial Catalog=fysiowebservice;Persist Security Info=False;User ID=fysiowebapplication;Password=czNmgkmaTaJ&s7JNeeLN;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "GraphqlUrl": "https://fysiowebservice.azurewebsites.net/graphql"
+    "GraphqlUrl": "https://localhost:44353/graphql"
   }
 }
